Comments fyrir method í controller og bætti við þannig að núna sést content og líka likes og dislikes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL connection details
 spring.datasource.url=jdbc:postgresql://localhost:5432/hbv501gdatabase
-spring.datasource.username=arnorgunnars
-spring.datasource.password=addidabbi
+spring.datasource.username=
+spring.datasource.password=
 
 # PostgreSQL Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
